--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,10 @@
 name: 'Codeowners Plus Plus'
-description: 'Extends the functionality of CODEOWNERS'
+description: 'Exten ds the functionality of CODEOWNERS'
+inputs:
+  token:
+    description: Token required for fetching the config file
+    required: true
+    # default: ${{ github.token }}
 runs:
   using: 'node16'
   main: 'dist/index.js'
