--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anshulsahni/codeowners-plus-plus#readme",
   "devDependencies": {
+    "@types/lodash": "4.14.197",
     "@types/node": "20.3.3",
     "@vercel/ncc": "0.36.1",
     "typescript": "5.1.6"
@@ -25,6 +26,7 @@
   "dependencies": {
     "@actions/core": "1.10.0",
     "@actions/github": "5.1.1",
-    "@actions/glob": "0.4.0"
+    "@actions/glob": "0.4.0",
+    "lodash": "4.17.21"
   }
 }
