--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@actions/core": "1.10.0",
     "@actions/github": "5.1.1",
     "@actions/glob": "0.4.0",
-    "lodash": "4.17.21"
+    "lodash": "4.17.21",
+    "minimatch": "^9.0.3"
   }
 }
