--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,8 +1,6 @@
 name: Sample workflow run
 
-on:
-  pull_request
-
+on: pull_request
 
 jobs:
   example:
@@ -12,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run one-lin script
-        run: echo Hello from github action
+      - name: Run one-line script
+        run: echo Starting the codeowners-plus-plus example run
 
       - name: Run codeowners-plus-plus
         uses: ./
