added permission for reading pull-requests

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -6,6 +6,8 @@ jobs:
   example:
     name: Example Job
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
 
     steps:
       - uses: actions/checkout@v3
