--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
+      contents: read
 
     steps:
       - uses: actions/checkout@v3
