chore: some improvements for development

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/main.ts",
   "scripts": {
     "build:bundle": "ncc build -m",
-    "build": "npm run build:tsc && npm run build:bundle",
-    "act-cli": "/bin/act pull_request -e pull_request.json -s GITHUB_TOKEN=\"$(gh auth token)\"",
+    "dev-trigger": "/bin/act pull_request -e pull_request.json -s GITHUB_TOKEN=\"$(gh auth token)\"",
+    "dev": "ncc build -w --out dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
