--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:bundle": "ncc build -m",
     "dev-trigger": "/bin/act pull_request -e pull_request.json -s GITHUB_TOKEN=\"$(gh auth token)\"",
     "dev": "ncc build -w --out dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "GITHUB_REPOSITORY_OWNER=sample_owner GITHUB_REPOSITORY=sample_owner/sample_repo jest"
   },
   "repository": {
     "type": "git",
