--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:bundle": "ncc build -m",
     "dev-trigger": "/bin/act pull_request -e pull_request.json -s GITHUB_TOKEN=\"$(gh auth token)\"",
     "dev": "ncc build -w --out dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "GITHUB_REPOSITORY_OWNER=sample_owner GITHUB_REPOSITORY=sample_owner/sample_repo jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/lodash": "4.14.197",
     "@types/node": "20.3.3",
-    "@vercel/ncc": "0.36.1"
+    "@vercel/ncc": "0.36.1",
+    "jest": "29.6.4",
+    "ts-jest": "29.1.1"
   },
   "dependencies": {
     "@actions/core": "1.10.0",
@@ -32,5 +34,22 @@
     "lodash": "4.17.21",
     "minimatch": "9.0.3",
     "typescript": "5.1.6"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testMatch": [
+      "**/*.test.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ]
   }
 }
