--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: 'Codeowners Plus Plus'
 description: 'Exten ds the functionality of CODEOWNERS'
+inputs:
+  token:
+    description: 'Token required for auth'
+    required: true
 runs:
   using: 'node16'
   main: 'dist/index.js'
